# Android-AudioApps

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/root/envgen/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DspFaust.cpp  native-lib.cpp
app/src/main/java/com/example/root/envgen/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/root/envgen/: ExampleUnitTest.java
